# my_site

./: hello.py  pyproject.toml
static/css/: styles.css
static/js/: clipboard.js
templates/: about.html  index.html
