[project]
name = "my-site"
version = "0.1.0"
description = "This project will include a fully working web application advertising my personal website"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.0",
    "fastapi>=0.115.5",
    "jinja2>=3.1.4",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.1",
]

[dependency-groups]
dev = [
    "ruff>=0.7.4",
]
